--- a/app/scss/pages/_404.scss
+++ b/app/scss/pages/_404.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
     text-align: center;
 
